--- a/src/404.html
+++ b/src/404.html
@@ -174,12 +174,14 @@
   </header>
   <main>
     <section class="no-page__main">
-      <div class="nopage__inner inner">
-        <div class="no-page__bread bread">
+      <div class="no-page__bread bread">
+        <div class="bread__inner inner">
           <a href="index.html" class="bread__top">TOP</a>
           <div class="bread__arrow"><img src="./assets/images/common/pager-white.png" alt="パンくず矢印"></div>
           <div class="bread__detail">404</div>
         </div>
+      </div>
+      <div class="nopage__inner inner">
         <div class="no-page__title-wrapper">
           <h1 class="no-page__title">404</h1>
         </div>
