--- a/src/contact-FAQ.html
+++ b/src/contact-FAQ.html
@@ -180,15 +180,16 @@
         <h1>FAQ</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">よくある質問</div>
       </div>
       <section class="contact-faq">
-        <div class="contact-faq__inner">
+        <div class="contact-faq__inner inner">
           <div class="contact-faq__wrapper faq-wrapper">
+
             <div class="contact-faq__faq faq-wrapper__item faq">
               <div class="faq__question open">
                 <h2>ここに質問が入ります。</h2>
@@ -262,44 +263,43 @@
           </div>
         </div>
       </section>
-    </div>
-    <!--contact-->
-    <section class="contact contact-wrapper contact-wrapper--faq">
-      <div class="contact__inner inner">
-        <div class="contact__content-inner">
-          <div class="contact__address-wrapper">
-            <div class="contact__info-wrapper">
-              <div class="contact__logo logo"><img src="./assets/images/common/contact-logo.png" alt="コードアップスのロゴ" />
+      <!--contact-->
+      <section class="contact contact-wrapper contact-wrapper--faq">
+        <div class="contact__inner inner">
+          <div class="contact__content-inner">
+            <div class="contact__address-wrapper">
+              <div class="contact__info-wrapper">
+                <div class="contact__logo logo"><img src="./assets/images/common/contact-logo.png" alt="コードアップスのロゴ" />
+                </div>
+              </div>
+              <div class="contact__info">
+                <div class="contact__address">
+                  <p>沖縄県那覇市1-1</p>
+                  <a href="tel:0120-000-0000" class="contact__tel">TEL:0120-000-0000</a>
+                  <p>営業時間:8:30-19:00</p>
+                  <p>定休日:毎週火曜日</p>
+                </div>
+                <div class="contact__map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6888.6383644040225!2d127.68185319225111!3d26.211610509147523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1713793644657!5m2!1sja!2sjp"
+                    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
               </div>
             </div>
-            <div class="contact__info">
-              <div class="contact__address">
-                <p>沖縄県那覇市1-1</p>
-                <a href="tel:0120-000-0000" class="contact__tel">TEL:0120-000-0000</a>
-                <p>営業時間:8:30-19:00</p>
-                <p>定休日:毎週火曜日</p>
+            <div class="contact__content">
+              <div class="contact__titles">
+                <p class="contact__titles-english">Contact</p>
+                <h2 class="contact__titles-japanese">お問い合わせ</h2>
               </div>
-              <div class="contact__map"><iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6888.6383644040225!2d127.68185319225111!3d26.211610509147523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1713793644657!5m2!1sja!2sjp"
-                  width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-            </div>
-          </div>
-          <div class="contact__content">
-            <div class="contact__titles">
-              <p class="contact__titles-english">Contact</p>
-              <h2 class="contact__titles-japanese">お問い合わせ</h2>
-            </div>
-            <p class="contact__text">ご予約・お問い合わせはコチラ</p>
-            <div class="contact__btn-wrapper">
-              <a href="./contact-form.html" class="btn">Contact us
-                <span></span>
-              </a>
+              <p class="contact__text">ご予約・お問い合わせはコチラ</p>
+              <div class="contact__btn-wrapper">
+                <a href="./contact-form.html" class="btn">Contact us
+                  <span></span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
   </main>
   <!--footer-->
   <footer class="footer footer-wrapper" id="footer">
