--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -179,24 +179,25 @@
         <h1>Contact</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
         <div class="bread__detail">お問い合わせ</div>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
         <div class="bread__detail">送信完了</div>
       </div>
-      <section class="contact-form contact-form-wrapper contact-form-wrapper--success">
-        <div class="contact-form__inner">
-          <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
-          <div class="contact-form__success">
-            <p>このたびは、お問い合わせ頂き<wbr />誠にありがとうございます。</p>
-            <p>お送り頂きました内容を確認の上、<wbr />3営業日以内に折り返しご連絡させて頂きます。</p>
-            <p>また、ご記入頂いたメールアドレスへ、<wbr />自動返信の確認メールをお送りしております。</p>
-          </div>
+    </div>
+    <section class="contact-form contact-form-wrapper contact-form-wrapper--success">
+      <div class="contact-form__inner inner">
+        <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
+        <div class="contact-form__success">
+          <p>このたびは、お問い合わせ頂き<wbr />誠にありがとうございます。</p>
+          <p>お送り頂きました内容を確認の上、<wbr />3営業日以内に折り返しご連絡させて頂きます。</p>
+          <p>また、ご記入頂いたメールアドレスへ、<wbr />自動返信の確認メールをお送りしております。</p>
         </div>
-      </section>
+      </div>
+    </section>
     </div>
   </main>
   <!--footer-->
