--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -180,8 +180,8 @@
         <h1>Contact</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">お問い合わせ</div>
@@ -189,7 +189,7 @@
         <div class="bread__detail bread__arrow--error">お問い合わせエラー</div>
       </div>
       <section class="contact-form contact-form-wrapper">
-        <div class="contact-form__inner">
+        <div class="contact-form__inner inner">
           <div class="contact-form__error-texts">
             <p class="contact-form__error-text">※必須項目が入力されていません。</p>
             <p class="contact-form__error-text">入力してください。</p>
