--- a/src/information.html
+++ b/src/information.html
@@ -180,14 +180,14 @@
         <h1>Information</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
         <div class="bread__detail">ダイビング情報</div>
       </div>
       <section class="info info-wrapper">
-        <div class="info__inner">
+        <div class="info__inner inner">
           <ul class="info__tabs">
             <li class="info__tab  info__tab--license" id="license-info">
               <p class="info__tab-text">ライセンス<wbr />講習</p>
@@ -324,7 +324,6 @@
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
-
                 </ul>
               </div>
             </div>
