--- a/src/voice.html
+++ b/src/voice.html
@@ -180,13 +180,15 @@
         <h1>Voice</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">お客様の声</div>
       </div>
-      <section class="voice voice-wrapper">
+    </div>
+    <section class="voice voice-wrapper">
+      <div class="voice__inner inner">
         <div class="voice__tabs tabs">
           <a href="#" class="tabs__item tab">ALL</a>
           <a href="#" class="tabs__item tab">ライセンス講習</a>
@@ -341,8 +343,8 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <!--contact-->
     <section class="contact contact-wrapper  contact-wrapper--voice">
       <div class="contact__inner inner">
