--- a/src/about-us.html
+++ b/src/about-us.html
@@ -178,47 +178,53 @@
         <h1>About us</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
+    <div class="bread">
+      <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">私たちについて</div>
       </div>
-      <section class="about-us about-us-wrapper">
-        <div class="about-us__inner">
-          <div class="about-us__img-wrapper">
-            <div class="about-us__img-left">
-              <img src="./assets/images/common/about-us-left.png" alt="沖縄の赤茶色の瓦屋根にシーサーが乗っていてこちらを見ている" />
-            </div>
-            <div class="about-us__img-right">
-              <img src="./assets/images/common/about-us-right.png" alt="海の中で黄色い熱帯魚が２匹向かい合っている" />
-            </div>
+    </div>
+    <section class="about-us about-us-wrapper">
+      <div class="about-us__inner inner">
+        <div class="about-us__img-wrapper">
+          <div class="about-us__img-left">
+            <img src="./assets/images/common/about-us-left.png" alt="沖縄の赤茶色の瓦屋根にシーサーが乗っていてこちらを見ている" />
           </div>
-          <div class="about-us__texts">
-            <p class="about-us__main-text">Dive into<br />the Ocean</p>
-            <div class="about-us__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-            </div>
+          <div class="about-us__img-right">
+            <img src="./assets/images/common/about-us-right.png" alt="海の中で黄色い熱帯魚が２匹向かい合っている" />
           </div>
         </div>
-      </section>
-      <section class="gallery gallery-wrapper">
+        <div class="about-us__texts">
+          <p class="about-us__main-text">Dive into<br />the Ocean</p>
+          <div class="about-us__text">
+            ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。
+            ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gallery gallery-wrapper">
+      <div class="gallery__inner inner">
         <div class="gallery__section-titles section-titles">
           <p class="section-titles__english">Gallery</p>
           <h2 class="section-titles__japanese">フォト</h2>
         </div>
         <div class="gallery__container-wrapper gallery__container ">
-          <div class="gallery__a"><img src="./assets/images/common/gallery1.png" alt="海中の大きな珊瑚に赤い小さな魚が群がっている写真">
+          <div class="gallery__photo" id="modal01"><img src="./assets/images/common/gallery1.png"
+              alt="海中の大きな珊瑚に赤い小さな魚が群がっている写真">
           </div>
-          <div class="gallery__b" id="modal02"><img src="./assets/images/common/gallery2.png" alt="海の浅瀬に浮かぶ船写真"></div>
-          <div class="gallery__c" id="modal03"><img src="./assets/images/common/gallery3.png" alt="白地に黒の縞模様の魚が2匹いる写真">
+          <div class="gallery__photo" id="modal02"><img src="./assets/images/common/gallery2.png" alt="海の浅瀬に浮かぶ船写真">
           </div>
-          <div class="gallery__d" id="modal04"><img src="./assets/images/common/gallery4.png" alt="黄色い魚が1匹泳いでいる写真">
+          <div class="gallery__photo" id="modal03"><img src="./assets/images/common/gallery3.png"
+              alt="白地に黒の縞模様の魚が2匹いる写真">
           </div>
-          <div class="gallery__e" id="modal05"><img src="./assets/images/common/gallery5.png" alt="小さな魚の魚群が泳いでいる写真">
+          <div class="gallery__photo" id="modal04"><img src="./assets/images/common/gallery4.png" alt="黄色い魚が1匹泳いでいる写真">
           </div>
-          <div class="gallery__f" id="modal06"><img src="./assets/images/common/gallery6.png" alt="サンゴ礁で黄色い魚が泳いでいる写真">
+          <div class="gallery__photo" id="modal05"><img src="./assets/images/common/gallery5.png" alt="小さな魚の魚群が泳いでいる写真">
+          </div>
+          <div class="gallery__photo" id="modal06"><img src="./assets/images/common/gallery6.png"
+              alt="サンゴ礁で黄色い魚が泳いでいる写真">
           </div>
         </div>
         <!--モーダル本体-->
@@ -264,9 +270,8 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
     </section>
-    </div>
     <!--contact-->
     <section class="contact contact-wrapper  contact-wrapper--about">
       <div class="contact__inner inner">
